frontend/src/app/user-location/user-location.page.scss
ion-toolbar {
  background: rgb(77,158,215);
  background: linear-gradient(90deg, rgba(77,158,215,0.6) 10%, rgba(128,93,167,0.6) 30%, rgba(239,81,157,0.6) 70%, rgba(97,200,207,0.6) 90%);
}


* {
  margin: 0px;
  padding: 0px;
}

#timestamp {
  font-size: 10pt;
  font-weight: bold;
}

.chatBubble {
  width: 300px;
  margin: 25px auto;
  margin-top: 2%;
  border: 4px solid #EF519D;
  padding: 20px;
  text-align: center;
  color: #303030;
  position: relative;
  box-shadow: 3px 3px 3px #b7b7b7;

  background-color: white;
}


/* speech bubble 6 */

.chatBubbleCorner:before {
  content: "";
  width: 0px;
  height: 0px;
  position: absolute;
  border-left: 10px solid transparent;
  border-right: 10px solid #EF519D;
  border-top: 10px solid #EF519D;
  border-bottom: 10px solid transparent;
  left: -21px;
  top: 6px;
}

.chatBubbleCorner:after {
  content: "";
  width: 0px;
  height: 0px;
  position: absolute;
  border-left: 7px solid transparent;
  border-right: 7px solid #fff;
  border-top: 7px solid #fff;
  border-bottom: 7px solid transparent;
  left: -11px;
  top: 10px;
}

ion-content {
    
  --background: url(../../assets/bg2.png) no-repeat center/cover fixed;
  background: rgb(255,255,255);
	background: linear-gradient(180deg, rgba(255,255,255,0.3) 13%, rgba(97,200,207,0.3) 50%, rgba(77,158,215,0.3) 88%);
}

.profileHeader {
  height: auto;
}

.profileIcon {
  height: auto;
  width: auto;
}

.follow {
  width: fit-content;
}

ion-content {
    
  --background: url(../../assets/bg_mid .png) no-repeat center/cover fixed;

}
ion-card {
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
  overflow: visible;
  margin: 16px 0 24px;
  position: relative;
  padding-top: 60px;

  .img-wrapper {
    position: absolute;
    left: 50%;
    top: -30px;
    transform: translateX(-50%);
    img {
      border-radius: 10px;
      width: 100px;
      height: 100px;
      display: flex;
      border-radius: 50%;
      bottom: calc(-1*(80px + 4px));
      border: 5px solid #EF519D;
      background-color: #d3d3d3;
    }

    ion-button {
      --border-width: 1px;
      --border-color: var(--ion-color-light-shade);
      --border-style: solid;
      --padding-start: 0;
      --padding-end: 0;
      --padding-bottom: 0;
      --padding-top: 0;

      --border-radius: 50%;
      height: 20px;
      width: 20px;

      position: absolute;
      right: 0px;
      bottom: 0px;

      ion-icon {
        width: 14px;
        height: 14px;
      }
    }
  }
}

#option {
  background: rgba(255,255, 255, 0.4);
  box-shadow: 3px 3px 3px #b7b7b7;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 15px;
  border: 3px solid #2D719F;
}

#label {
  text-shadow: 1px 1px 1px #404040;
}

#label2 {
  text-shadow: 2px 2px 2px rgb(0, 0, 0);

}


ion-list-header{
  justify-content: center;
}

.video-container {
  background-color: green($color: #000000);
  height: 240px;
  padding: 0px;  
}

